--- a/index.html
+++ b/index.html
@@ -5,47 +5,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>VITOR RYAN</h1>
-
-    <div id="calculadora">
-        <p>Resultado</p>
-
-        <table>
-            <tr>
-                <td>C</td>
-                <td>k</td>
-                <td>/</td>
-                <td>X</td>
-            </tr>
-
-            <tr>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-                <td>-</td>
-            </tr>
-
-            <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>+</td>
-            </tr>
-
-            <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>=</td>
-            </tr>
-
-            <tr>
-                <td>0</td>
-                <td>.</td>
-            </tr>
-        </table>
+    <div id="fundo">
+        <h1>VITOR RYAN</h1>
+        <div id="calculadora">
+            <p id="resultado"></p>
+            <table>
+                <tr>
+                    <td><button class="bt" onclick="clean('')">C</button></td>
+                    <td><button class="bt" onclick="back('')">&lt;</button></td>
+                    <td><button class="bt" onclick="insert('/')">/</button></td>
+                    <td><button class="bt" onclick="insert('*')">X</button></td>
+                </tr>
+                <tr>
+                    <td><button class="bt" onclick="insert('7')">7</button></td>
+                    <td><button class="bt" onclick="insert('8')">8</button></td>
+                    <td><button class="bt" onclick="insert('9')">9</button></td>
+                    <td><button class="bt" onclick="insert('-')">-</button></td>
+                </tr>
+                <tr>
+                    <td><button class="bt" onclick="insert('4')">4</button></td>
+                    <td><button class="bt" onclick="insert('5')">5</button></td>
+                    <td><button class="bt" onclick="insert('6')">6</button></td>
+                    <td><button class="bt" onclick="insert('+')">+</button></td>
+                </tr>
+                <tr>
+                    <td><button class="bt" onclick="insert('1')">1</button></td>
+                    <td><button class="bt" onclick="insert('2')">2</button></td>
+                    <td><button class="bt" onclick="insert('3')">3</button></td>
+                    <td rowspan="2"><button class="bt" style="height: 109px;" onclick="calcular()">=</button></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><button class="bt" onclick="insert('0')" style="width: 109px;">0</button></td>
+                    <td><button class="bt" onclick="insert('.')">.</button></td>
+                </tr>
+            </table>
+        </div>
     </div>
+
+    <script>
+        function insert(num)
+        {
+            var numero = document.getElementById('resultado').innerHTML;
+            document.getElementById('resultado').innerHTML = numero + num;
+        }
+
+        function clean() //função limpar
+        {
+            document.getElementById('resultado').innerHTML = "" //comando para limpar tudo
+        }
+
+        function back() //função limpar
+        {
+            var resultado = document.getElementById('resultado').innerHTML;
+            document.getElementById('resultado').innerHTML = resultado.substring(0, resultado.length -1) //comando para apagar um numero
+        }
+
+        function calcular()
+        {
+            var resultado = document.getElementById('resultado').innerHTML;
+            if(resultado)
+            {
+                document.getElementById('resultado').innerHTML = eval(resultado)
+            }
+        }
+        
+    </script>
 </body>
 </html>
