--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <div id="fundo">
-        <h1>VITOR RYAN</h1>
+        <h1>Calculadora</h1>
+
         <div id="calculadora">
             <p id="resultado"></p>
+
             <table>
                 <tr>
-                    <td><button class="bt" onclick="clean('')">C</button></td>
-                    <td><button class="bt" onclick="back('')">&lt;</button></td>
-                    <td><button class="bt" onclick="insert('/')">/</button></td>
-                    <td><button class="bt" onclick="insert('*')">X</button></td>
+                    <td><button class="bt1" onclick="clean('')">C</button></td>
+                    <td><button class="bt1" onclick="back('')">&lt;</button></td>
+                    <td><button class="bt1" onclick="insert('')">%</button></td>
+                    <td><button class="bt2" onclick="insert('/')">/</button></td>
                 </tr>
                 <tr>
                     <td><button class="bt" onclick="insert('7')">7</button></td>
                     <td><button class="bt" onclick="insert('8')">8</button></td>
                     <td><button class="bt" onclick="insert('9')">9</button></td>
-                    <td><button class="bt" onclick="insert('-')">-</button></td>
+                    <td><button class="bt2" onclick="insert('*')">*</button></td>
                 </tr>
                 <tr>
                     <td><button class="bt" onclick="insert('4')">4</button></td>
                     <td><button class="bt" onclick="insert('5')">5</button></td>
                     <td><button class="bt" onclick="insert('6')">6</button></td>
-                    <td><button class="bt" onclick="insert('+')">+</button></td>
+                    <td><button class="bt2" onclick="insert('-')">-</button></td>
                 </tr>
                 <tr>
                     <td><button class="bt" onclick="insert('1')">1</button></td>
                     <td><button class="bt" onclick="insert('2')">2</button></td>
                     <td><button class="bt" onclick="insert('3')">3</button></td>
-                    <td rowspan="2"><button class="bt" style="height: 109px;" onclick="calcular()">=</button></td>
+                    <td><button class="bt2" onclick="insert('+')">+</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button class="bt" onclick="insert('0')" style="width: 109px;">0</button></td>
+                    <td colspan="2"><button style="width: 103px;" class="bt" onclick="insert('0')">0</button></td>
                     <td><button class="bt" onclick="insert('.')">.</button></td>
+                    <td><button class="bt2" onclick="calcular()">=</button></td>
                 </tr>
             </table>
         </div>
@@ -48,30 +50,29 @@
     <script>
         function insert(num)
         {
-            var numero = document.getElementById('resultado').innerHTML;
-            document.getElementById('resultado').innerHTML = numero + num;
+            var numero = document.getElementById('resultado').innerHTML
+            document.getElementById('resultado').innerHTML = numero + num
         }
 
-        function clean() //função limpar
+        function clean()
         {
-            document.getElementById('resultado').innerHTML = "" //comando para limpar tudo
+            document.getElementById('resultado').innerHTML = ""
         }
 
-        function back() //função limpar
+        function back()
         {
-            var resultado = document.getElementById('resultado').innerHTML;
-            document.getElementById('resultado').innerHTML = resultado.substring(0, resultado.length -1) //comando para apagar um numero
+            var resultado = document.getElementById('resultado').innerHTML
+            document.getElementById('resultado').innerHTML = resultado.substring(0, resultado.length -1)
         }
 
         function calcular()
         {
-            var resultado = document.getElementById('resultado').innerHTML;
+            var resultado = document.getElementById('resultado').innerHTML
             if(resultado)
             {
                 document.getElementById('resultado').innerHTML = eval(resultado)
             }
         }
-        
     </script>
 </body>
 </html>
